# Aethaum

./: .gitignore  Cargo.toml  README.md  README_en.md
crates/aethaum-cli/: Cargo.toml
crates/aethaum-core/: Cargo.toml
crates/aethaum-core/src/: code_generator.rs  ecs.rs  lib.rs  toml_parser.rs
crates/aethaum-core/src/code_generator/: aethaum_predefined.rs  transpile.rs  utils.rs
crates/aethaum-core/src/ecs/: checker.rs  loader.rs  module.rs
crates/aethaum-core/src/ecs/checker/: context.rs  cross_module.rs  in_module.rs  type_checker.rs
crates/aethaum-core/src/toml_parser/: parsed.rs  raw.rs
crates/aethaum-macros/: Cargo.toml
crates/aethaum-runtime/: Cargo.toml
test_project/: world.toml
test_project/modules/combat/components/: health.toml
test_project/modules/explore/components/: explore.toml  test.toml
test_project/modules/explore/entity_protos/: test_protos.toml
test_project/modules/explore/events/: required_events.toml
test_project/modules/explore/systems/: health.toml
