[workspace]
members = [
    "crates/aethaum-core",
    "crates/aethaum-cli",
    "crates/aethaum-runtime",
    "crates/aethaum-macros",
]
[workspace.dependencies]
# 共享依赖版本
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.5"
mlua = { version = "0.11.2", features = ["lua54", "vendored"] }
bevy_ecs = "0.16.1"
bevy_app = "0.16.1"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
smart-string = { version = "0.1.3", features = ["serde"]}
itertools = "0.14.0"
one-or-many = "0.4.0"
miette = "7.6.0"
thiserror = "2.0.16"