[package]
name = "aethaum-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
bevy_ecs.workspace = true
mlua.workspace = true
smart-string.workspace = true
itertools.workspace = true
one-or-many.workspace = true
miette.workspace = true
thiserror.workspace = true